--- a/app/src/main/res/menu/menu_bluetooth_connection.xml
+++ b/app/src/main/res/menu/menu_bluetooth_connection.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.lutron.sir_wheelium_ii.BluetoothConnectionActivity">
     <item android:id="@+id/bluetooth_settings" android:title="@string/bluetooth_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+          android:orderInCategory="100" app:showAsAction="never" />
 </menu>
