--- a/app/src/main/res/layout/launcher_activity.xml
+++ b/app/src/main/res/layout/launcher_activity.xml
@@ -59,6 +59,7 @@
         android:layout_height="60dp"
         android:text="@string/launch_button"
         android:id="@+id/launchButton"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:onClick="onLaunchButtonClicked" />
 
 </LinearLayout>
